# fluvius-py

./: .gitignore  CONTEXTVARS_MIGRATION.md  Justfile  LICENSE  README.md  config.ini  flvctl  justfile  manager  pyproject.toml  pytest.ini  requirements.txt
.command/jucmd/: _default.just  python.just  release.just
.command/pycmd/: version-bump.py
.github/workflows/: README.md  advanced-tests.yml  ci.yml  pytests.yml  release-pypi.yml  release.yml
.justcmd/: python.just
cmd/: __init__.py
cmd/flvctl/: README.md  __init__.py  main.py
cmd/flvctl/db/: __init__.py  _common.py  commands.py  create_schema.py  drop_schema.py  export_data.py  import_data.py
cmd/flvctl/run/: __init__.py
docs/: AI-CONTEXT.md  FLVCTL.md  FOREIGN_KEY_FIX.md  FRONTEND-STATE-MANAGEMENT.md  LICENSE.md  MUTATION-REFERENCE.md  NOTES.md  POLICY.md  README.md  SECURITY-FIXES-AUTH.md  TEST-ORGANIZATION-PLAN.md  media_interface.md  query_resource_loader.md
docs/errors/: @ERROR_CODES.md  ERROR_CODES.md  update_error_codes.py
docs/notes.ai/: 2024-12-20-fluvius-query-test-review-and-vscode-setup.md  README.md
docs/notes.hl/: NOTES.md
examples/: DOMAIN_COMPATIBILITY.md  EXAMPLE_UPDATES.md  Justfile  README.md  filesystem.yaml  keycloak_app.py  media_interface_demo.py  query_loader_demo.py  requirements.txt
examples/banking_domain/: __init__.py  __main__.py  aggregate.py  command.py  context.py  datadef.py  domain.py  event.py  fixture.py  resource.py  response.py
examples/banking_domain/cfg/: __init__.py
examples/fastapi_app/: Justfile  README.md  config.ini  docker-compose.yml  main.py
examples/jwt_auth/: README.md  __init__.py  __main__.py  app.py  config.py  keycloak_client.py  requirements.txt
examples/jwt_auth/static/: styles.css
examples/jwt_auth/templates/: index.html  protected.html
examples/legacy/user_domain/: __init__.py  __main__.py  command.py  domain.py  storage.py
examples/loan_application/: API_ENDPOINTS.md  IMPLEMENTATION_SUMMARY.md  config.ini  import_workflow_definitions.py  justfile  pytest.ini  run_tests.py  test_gen_wfdefs.py  verify_implementation.py  verify_setup.py
examples/loan_application/dkc/: .env.example  docker-compose.yml
examples/loan_application/docs/: DOCKER_ENV_SETUP.md  LOAN-APPLICATION-PROCESS.md  README.md  (+2 more)
examples/media_app/: Justfile  __init__.py  config.ini  filesystem.yaml
examples/object_domain/: __init__.py  aggregate.py  command.py  domain.py  query.py  storage.py
examples/sample_app/: Justfile  __init__.py  __main__.py  config.ini  defaults.py  webserver.py
examples/sample_data_model/: __init__.py  sample_data_schema.py
examples/simple_eval/: example.py
examples/user_domain/: __init__.py  aggregate.py  command.py  datadef.py  domain.py  event.py  model.py  query.py  state.py
examples/workflow_manager/: .gitignore  Justfile  config.ini  pyproject.toml  requirements.txt  setup.py
examples/workflow_manager/dkc/: docker-compose.yml
examples/workflow_manager/docs/: CONVERSION_COMPLETE.md  RESTRUCTURE_COMPLETE.md
examples/workflow_manager/src/workflow_manager/: __init__.py  config.py  main.py
examples/workflow_manager/tests/: __init__.py  conftest.py  test_import.py  test_workflow_commands.py
src/fluvius/: __init__.py  constant.py
src/fluvius_test/: __init__.py  cqrs_fixtures.py  helper.py  sample_data_model.py  sample_data_schema.py
src/riparius/: __init__.py  datadef.py  engine.py  manager.py  model.py  mutation.py  router.py  schema.py  status.py  storage.py  workflow.py
tests/_conf/: model_1.conf  model_2.conf  sample.yml  testwriter.yml
tests/_data/: mock_data_1.csv  mock_data_2.csv  policy_2.csv  policy_3.csv  policy_test.csv
tests/_lib/: cqrs_fixtures.py  datamap_helper.py  sample_data_model.py  sample_data_schema.py
tests/fluvius_base/: test_fluvius_base.py
tests/fluvius_casbin/: test_command_policy.py  test_policy.py
tests/fluvius_data/: test_directsql_sqlite.py  test_driver_sqla.py  test_memory_data.py  test_process_query_statement.py  test_query.py  test_sqla_query_translation.py
tests/fluvius_dform/: conftest.py  test_document_template.py  test_domain_query.py  test_element_schema.py  test_form_commands.py  test_form_domain.py  test_form_elements.py  test_form_queries.py  test_form_schema.py
tests/fluvius_dmap/: test_data_process.py  test_fetcher.py  test_interface.py  test_reader_writer_config.py
tests/fluvius_domain/: fixtures.py  test_object_domain.py  test_user_domain.py
tests/fluvius_fastapi/: test_fastapi_domain.py  test_kcadmin.py
tests/fluvius_form/: conftest.py  test_form_domain.py  test_form_elements.py  test_form_queries.py
tests/fluvius_interlink/: __init__.py  conftest.py  test_workflow.py
tests/fluvius_media/: test_compressor.py  test_media_interface.py
tests/fluvius_mqtt/: test_mqtt_simple.py
tests/fluvius_nava/: conftest.py  test_workflow.py
tests/fluvius_navis/: conftest.py  test_workflow.py
tests/fluvius_ordinal/: __init__.py  test_fluvius_ordinal.py  test_retracted_rule.py
tests/fluvius_ordinis/: __init__.py  test_fluvius_ordinal.py  test_retracted_rule.py
tests/fluvius_pdfgen/: test_complex_template.py  test_form_filling.py  test_html2pdf.py  test_pdfgen_basic.py
tests/fluvius_process/: conftest.py  test_workflow.py
tests/fluvius_query/: _disabled_test_loader.py  test_loader.py  test_query.py
tests/fluvius_rule/: test_kengine.py  test_retracted_rules.py
tests/fluvius_rulepy/: test_rulepy.py  test_rulepy_retracted_rules.py
tests/fluvius_sandbox/: test_process_query_statement.py
tests/fluvius_tracker/: create_schema.py  test_tracker.py
tests/fluvius_worker/: run_client.py  run_domain.py  run_domain_client.py  run_worker.py  test_worker.py  update_db.py
tests/logs/: report.html
tests/riparius/: _disabled_test_process_registration.py  _test_commands.py  _test_queries.py  _test_riparius_final.py  conftest.py  test_commands.py  test_queries.py  test_riparius_final.py  test_state_machine.py  test_workflow.py
tests/webserver_fastapi/: README.md  __init__.py  conftest.py  requirements-test.txt  test_auth.py  test_fastapi_app.py
(+476 files in other folders)
