# NOTE: Use pytest.ini instead, asyncio_default_fixture_loop_scope is not pick up by pytest-asyncio here
[tool.pytest.ini_options]
asyncio_mode = "auto"

# Use a separate pytest.ini just for this setting, even if you prefer pyproject.toml for most things ...
asyncio_default_fixture_loop_scope = "session"


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "fluvius"
version = "0.2.0-rc0"
authors = [
    { name = "Hung X. Le", email = "hunglx@adaptive-bits.com" },
    { name = "Phu V. Nguyen", email = "phunv@adaptive-bits.com" },
]
description = "Fluvius Framework (https://fluvius.io)"
readme = "docs/README.md"
requires-python = ">=3.12"
license = "GPL-3.0-or-later"
dependencies = [
    "aiohttp>=3.13.3",
    "aioredis>=2.0.0",
    "arq>=0.26.3",
    "asyncpg>=0.30.0",
    "blinker>=1.9.0",
    "casbin>=1.41.0",
    "click>=8.1.8",
    "croniter>=6.0.0",
    "fastapi",
    "fastapi-mcp>=0.3.3",
    "fsspec>=2025.3.2",
    "greenlet>=3.3.0",
    "h11>=0.16.0",
    "iso8601",
    "jsonurl-py>=0.4.0",
    "mcp>=1.23.0",
    "pipe>=2.2",
    "pydantic[email]>=2.11.4",
    "pypika",
    "pyrsistent>=0.20.0",
    "python-dateutil>=2.9.0.post0",
    "requests>=2.32.4",
    "ruff>=0.9.1",
    "sqlalchemy[asyncio]>=2.0.37",
    "sqlmodel",
    "starlette>=0.49.1",
    "ulid-py>=1.1.0",
    "urllib3>=2.6.3",
    "whenever>=0.7.3",
]

[dependency-groups]
dev = [
    "pandas",
    "pyinstrument>=5.0.1",
    "pytest-asyncio>=0.26.0",
    "pytest-html>=4.1.1",
    "pytest>=8.3.5",
    "sanic-testing>=24.6.0",
    "yappi>=1.6.10",
]


[tool.setuptools.packages.find]
where = ["src"]


[tool.black]
line-length = 119

[tool.pyright]
include = ["src", "tests"]
exclude = []
pythonVersion = "3.12"
typeCheckingMode = "off"
reportImportCycles = false
reportPrivateUsage = false

# enable these for now as none of raise any
# errors anyway
reportCallInDefaultInitializer = true
reportImplicitStringConcatenation = true
